[project]
name = "tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "anyio>=4.12.1",
    "numpy>=2.4.1",
    "pybind11>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "setuptools-rust>=1.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
#url = "https://mirrors.tencentyun.com/pypi/simple/" # 内网
